# rs_driver

./: .clang-format  .gitignore  .gitmodules  BUILD  CHANGELOG.md  CHANGELOG_CN.md  CHANGELOG_EN.md  CMakeLists.txt  README.md  README_CN.md  README_EN.md  WORKSPACE
UI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
adapter/: lidar_driver_adapter.hpp  lidar_packets_proto_adapter.cpp  lidar_packets_proto_adapter.h  lidar_packets_ros_adapter.h  lidar_packtes_ros_adapter.cpp  lidar_points_proto_adapter.cpp  lidar_points_proto_adapter.h  lidar_points_ros_adapter.cpp  lidar_points_ros_adapter.h
cmake/: FindV4L2.cmake  rs_driver.cmake  rs_driver.cmake.in  rs_driverConfig.cmake.in
common/: CMakeLists.txt  common_header.h  driver_param.h
common/lib/: libyaml-cpp.so.0.5.2
conf/: config.yaml
conf/left_lidar/: lidar.yaml
conf/middle_lidar/: lidar.yaml
conf/right_lidar/: lidar.yaml
demo/: CMakeLists.txt  demo.cpp  demo_gmsl.cpp  demo_linux_online.cpp  demo_linux_pcap.cpp  demo_online.cpp  demo_online.cpp.bak  demo_pcap.cpp  demo_pcap.cpp.bak  demo_usb.cpp  demo_windows_online.cpp  demo_windows_pcap.cpp  pcl_point_cloud_msg.h  point_cloud_msg.h  simple_viewer.cpp  simple_viewer.h  simple_viewer_glfw.cpp
demo/ros/: demo_online_recv_ros_send.cpp  demo_pcap_recv_ros_send.cpp  demo_ros_recv_ros_send.cpp  lidar_scan_ros.h
dependencies/: install.sh
doc/: Error code简介.md  使用示例.md  参数简介.md  接口文档.md  消息简介.md
doc/howto/: 06_how_to_port_your_app_from_rs_driver_1.3.x_to_1.5.x.md  06_how_to_port_your_app_from_rs_driver_1.3.x_to_1.5.x_CN.md  07_how_to_decode_online_lidar.md  07_how_to_decode_online_lidar_CN.md  07_how_to_port_your_app_from_rs_driver_1.3.x_to_1.5.x.md  07_how_to_port_your_app_from_rs_driver_1.3.x_to_1.5.x_CN.md  08_how_to_decode_online_lidar.md  08_how_to_decode_online_lidar_CN.md  08_online_lidar_advanced_topics.md  08_online_lidar_advanced_topics_CN.md  09_how_to_decode_pcap_file.md  09_how_to_decode_pcap_file_CN.md  09_online_lidar_advanced_topics.md  09_online_lidar_advanced_topics_CN.md  10_how_to_decode_pcap_file.md  10_how_to_decode_pcap_file_CN.md  10_pcap_file_advanced_topics.md  10_pcap_file_advanced_topics_CN.md  11_how_to_configure_by_pcap_file.md  11_how_to_configure_by_pcap_file_CN.md  11_pcap_file_advanced_topics.md  11_pcap_file_advanced_topics_CN.md  12_how_to_capture_pcap_file.md  12_how_to_capture_pcap_file_CN.md  12_how_to_configure_by_pcap_file.md  12_how_to_configure_by_pcap_file_CN.md  13_how_to_use_rs_driver_viewer.md  13_how_to_use_rs_driver_viewer_CN.md  14_how_to_transform_pointcloud.md  14_how_to_transform_pointcloud_CN.md  14_how_to_use_rs_driver_viewer.md  14_how_to_use_rs_driver_viewer_CN.md  15_how_to_compile_on_windows.md  15_how_to_compile_on_windows_CN.md  15_how_to_transform_pointcloud.md  15_how_to_transform_pointcloud_CN.md  16_how_to_avoid_packet_loss.md  16_how_to_avoid_packet_loss_CN.md  16_how_to_compile_on_windows.md  16_how_to_compile_on_windows_CN.md  (+41 more)
doc/intro/: 01_directories_and_files.md  01_directories_and_files_CN.md  02_thread_model.md  02_thread_model_CN.md  03_parameter_intro.md  03_parameter_intro_CN.md  04_cmake_macros_intro.md  04_cmake_macros_intro_CN.md  04_parameter_intro.md  04_parameter_intro_CN.md  (+17 more)
driver/: input.hpp  lidar_driver.hpp
interface/: lidar_interface.h  rslidar_interface.h
macro/: macro.h  macro.h.in
manager/: sensor_manager.cpp  sensor_manager.h
modules/rs_common/: CMakeLists.txt  LICENSE
modules/rs_common/include/rs_common/: common.h
modules/rs_common/include/rs_common/debug/: error_printer.h  msg_printer.h  prompt.h
modules/rs_common/include/rs_common/interface/sensor/: lidar_packets_interface.h  lidar_points_interface.h
modules/rs_common/include/rs_common/msg/: proto_msg_translator.h  ros_msg_translator.h
modules/rs_common/include/rs_common/msg/ros_msg/: lidar_scan_ros.h
modules/rs_common/include/rs_common/msg/rs_msg/: lidar_scan_msg.h
modules/rs_common/include/rs_common/proto/: proto_base.hpp
modules/rs_common/include/rs_common/utility/: lock_queue.h  time.h
modules/rs_common/include/rs_common/yaml/: encryptor_wrapper.h  yaml_parser.h
modules/rs_common/lib/: libyaml-cpp.so.0.5
modules/rs_common/src/utility/: thread_pool.cpp
modules/rs_common/src/yaml/: yaml_parser.cpp
modules/rs_lidar/: CMakeLists.txt
modules/rs_lidar/include/rs_lidar/: input.h  lidar_driver.h
modules/rs_lidar/include/rs_lidar/decoder/: decoder_128.hpp  decoder_16.hpp  decoder_32.hpp  decoder_base.hpp  decoder_bp.hpp  decoder_factory.hpp
modules/rs_lidar/src/: input.cpp  lidar_driver.cpp
modules/rs_manager/: CMakeLists.txt
modules/rs_manager/include/rs_sensor/proto/: lidar_packets_proto_adapter.h  lidar_points_proto_adapter.h
modules/rs_manager/include/rs_sensor/sensor_manager/: sensor_manager.h
modules/rs_manager/src/proto/lidar/: lidar_packets_proto_adapter.cpp  lidar_points_proto_adapter.cpp
modules/rs_manager/src/ros/: lidar_packtes_ros_adapter.cpp  lidar_points_ros_adapter.cpp
modules/rs_manager/src/sensor_manager/: sensor_manager.cpp
msg/: lidar_packet_msg.h  lidar_pointcloud_msg.h  lidar_points_msg.h  lidar_scan_msg.h  ros_msg_translator.h
test/: CMakeLists.txt  ab_dual_return_block_diff_test.cpp  ab_dual_return_block_iterator_test.cpp  basic_attr_test.cpp  buffer_test.cpp  chan_angles_test.cpp  dbg_test.cpp  decoder_opt_test.cpp  decoder_rs16_test.cpp  decoder_rs32_test.cpp  decoder_rsbp_test.cpp  decoder_test.cpp  dual_return_block_diff_test.cpp  dual_return_block_iterator_test.cpp  dual_return_packet_traverser_test.cpp  packet_test.cpp  rs16_dual_return_block_iterator_test.cpp  rs16_single_return_block_iterator_test.cpp  rs_common_test.cpp  rs_driver_test.cpp  section_test.cpp  simd_test.cpp  single_return_block_diff_test.cpp  single_return_block_iterator_test.cpp  single_return_packet_traverser_test.cpp  split_strategy_test.cpp  sync_queue_test.cpp
tool/: CMakeLists.txt  rs_driver_pcdsaver.cpp  rs_driver_viewer.cpp
utility/: error_code.h  lock_queue.h  prompt.h  thread_pool.cpp  thread_pool.h  thread_pool.hpp  time.h
win/: rs_driver.sln
(+161 files in other folders)
